[package]
name = "shivarthu_client_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.196"
serde_json = "1.0.112"
thirtyfour = "0.31.0"
tokio = "1.35.1"
# web-sys = {version="0.3.67", features = ['Event', 'HtmlInputElement']}
